--- a/.github/workflows/tyk-sync-workflow.yml
+++ b/.github/workflows/tyk-sync-workflow.yml
@@ -21,7 +21,7 @@ jobs:
         --mount type=bind,source="$(pwd)",target=/opt/tyk-sync/tmp \
         tykio/tyk-sync:v1.4.3 \
         sync \
-        -d="${{ secrets.DASHBOARD_API_KEY }}" \
-        -s="${{ secrets.DASHBOARD_URL }}" \
+        -d="${{ secrets.DASHBOARD_URL }}" \
+        -s="${{ secrets.DASHBOARD_API_KEY }}" \
         -p="./tmp"
       
