Adjustment of Flow for Tyk OAS Spec

--- a/.github/workflows/tyk-sync-workflow.yml
+++ b/.github/workflows/tyk-sync-workflow.yml
@@ -23,6 +23,4 @@ jobs:
         sync \
         -d="${{ secrets.DASHBOARD_URL }}" \
         -s="${{ secrets.DASHBOARD_API_KEY }}" \
-        -p="./tmp" \
-        --allow-unsafe-oas
-      
+        -p="./tmp"
